--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.12.1"
+  },
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
@@ -10,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "helmet": "^6.0.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
     "multer": "^1.4.4",
